Update 이분탐색 + 투포인터.md

--- a/Algo_Pig/Binary_search + Two_Pointer/이분탐색 + 투포인터.md
+++ b/Algo_Pig/Binary_search + Two_Pointer/이분탐색 + 투포인터.md
@@ -1,1 +1,63 @@
-https://www.acmicpc.net/problem/2461
+# 알고리즘 스터디 Yeahhhhh 2기 Algo Pig
+
+![MuaKissGIF](https://github.com/user-attachments/assets/02fd98c1-7d38-493c-901c-d74daf0bb3d1)
+
+## 운영 방법
+- 1주일동안 각자 유형에 맞는 문제들을 '백준 단계별로 풀어보기' 등에서 각자 풀어봅니다.
+- 다음 스터디 전 금요일까지 풀이한 문제에서 문제를 선정하거나 이외에도 헷갈만한 유형의 문제를 올립니다.
+- **문제 선정 기준**: 아래 기준에 맞는 문제를 1개 이상 선정하여 공유합니다.
+    1. 풀이 과정에서 **어려웠거나 시간이 오래 걸린 문제**
+    2. 알고리즘 분류는 알지만 **접근법이 바로 떠오르지 않았던 문제**
+    3. 다른 사람과 **다른 풀이 방식에 대해 토론**하고 싶은 문제
+-  **매주 화(17:00)에 풀이 발표** 합니다.
+-  **구현 문제**는 2주에 한문제씩 선정하여 최대 4시간의 시간제한을 두고 푸는 연습을 하며, 풀다가 막혔던 부분이나 구현 팁을 공유합니다.
+-  문제에 대한 질문이 생기거나 토의할 사항이 있는 경우는 **GitHub issue**에 업로드 한 뒤에 공유합니다. 
+
+## 목표 
+- **하반기 모든 기업 코테 합격** <br>
+- **알고리즘 구현 능력 향상**
+
+## 목적
+- **문제 찾는 시간을 줄이고, 학습에 집중합니다.** <br>
+- 각자 **풀이를 발표**하면서 **팀원간 토의를 통하여 더 나은 알고리즘 설계 기법을 학습합니다.**
+
+## 이번주 문제 
+
+<h3>헌우</h3>
+
+|주차|날짜|출처|문제|소요 시간|
+|--|--|--|--|--|
+|**1주차** |2025.07.08|백준|[냅색 문제](https://www.acmicpc.net/problem/1450)|
+
+<h3>형선</h3>
+
+|주차|날짜|출처|문제|소요 시간|
+|--|--|--|--|--|
+|**1주차** |2025.07.08|백준|[링크와 스타트](https://www.acmicpc.net/problem/15661)|
+
+<h3>영호</h3>
+
+|주차|날짜|출처|문제|소요 시간|
+|--|--|--|--|--|
+|**1주차** |2025.07.08|백준|[링크와 스타트](https://www.acmicpc.net/problem/15661)|
+
+
+## 집합소
+- https://app.gather.town/app/wrJJeVsATiSAwRGp/boost
+
+## 좋은 문제는 어디서 찾나요? 🤔
+
+- 보통 **백준** 많이 푼 것 중에 (내기준) 풀 방법이 아예 안보이는 것 (주관적 최고의 문제)
+- **USACO**(미국 정올), **KOI** (한국 정올)에 골드수준에서 양질의 문제가 많음
+- **해커랭크**, **릿코드** -> 난이도 미디움~하드 사이
+- **프로그래머스** 기출문제 (훌륭한 문제이나 다음 같은 회사에서 기출 나올 확률이 낮음)
+- 최근에는 **코드포스**, **앳코더**에서도 볼만한 사고력 문제가 종종 출제되는 것 같음! 
+
+
+## Online Judge Site
+- [백준 [BOJ]](https://www.acmicpc.net/)
+- [앳코더 [ATC]](https://atcoder.jp/)
+- [프로그래머스 [PRO]](https://programmers.co.kr/)
+- [코드포스 [COD]](https://codeforces.com/)
+- [해커랭크 [HAC]](https://www.hackerrank.com/)
+- [리트코드 (LEE)](https://leetcode.com/)
